Added rasterizer for scissors